Ports code back to Java 8.