@@ -12,7 +12,7 @@ import java.lang.management.ManagementFactory;
 import java.lang.management.OperatingSystemMXBean;
 import java.lang.management.RuntimeMXBean;
 import java.nio.file.Files;
-import java.nio.file.Path;
+import java.nio.file.Paths;
 import java.util.Optional;
 import java.util.stream.Collectors;
 
@@ -36,7 +36,7 @@ public class SystemInfo {
         } else if (osName.startsWith("linux")) {
             cmd = null;
             try {
-                Optional<String> matchedLine = Files.lines(Path.of("/proc/cpuinfo"))
+                Optional<String> matchedLine = Files.lines(Paths.get("/proc/cpuinfo"))
                         .filter(l -> l.startsWith("model name") && l.contains(": "))
                         .map(l -> l.substring(l.indexOf(':') + 2))
                         .findAny();
